# llama-recipe-manager

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  justfile  package-lock.json  package.json  vite.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aur.yml  ci.yml  dependabot-bun-lock.yml  release.yml  release_aur.yml
docs/: Development.md  PLAN.md  Release.md
packaging/aur/: README.md
packaging/aur/llama-recipe-manager/: PKGBUILD.tmpl
packaging/aur/llama-recipe-manager-git/: PKGBUILD
scripts/: bump-version.py  make-icons.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  process.rs  state.rs  validate.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/migrations/: 0001_initial.sql  0002_enable_metrics_by_default.sql
src-tauri/tests/: db_integration.rs
src/lib/: api.ts  featureFlags.ts  types.ts
src/lib/api/: index.ts  recipes.ts  server.ts  settings.ts  updater.ts
src/lib/components/: AboutDialog.svelte  CommunitySidebar.svelte  CommunityView.svelte  ConfirmDialog.svelte  FilePickerInput.svelte  LiveStatsPanel.svelte  LogsPanel.svelte  NavRail.svelte  RecipeDetail.svelte  RecipeForm.svelte  RecipeListItem.svelte  ServerStatusBar.svelte  SettingsForm.svelte  Sidebar.svelte  UpdateBanner.svelte  ValidatedPathInput.svelte
src/lib/stores/: recipes.svelte.ts  server.svelte.ts  settings.svelte.ts  theme.svelte.ts  updater.svelte.ts
src/lib/utils/: format.ts  gpuOptions.ts  llamaClient.ts  metrics.ts  preview.ts  server.ts  validate.ts
src/routes/: +layout.svelte  +page.svelte
tests/unit/: featureFlags.test.ts  format.test.ts  gpuOptions.test.ts  metrics.test.ts  preview.test.ts  validate.test.ts
